# quilldee

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  deny.toml  rustfmt.toml
.cargo-husky/hooks/: pre-push
.github/ISSUE_TEMPLATE/: bug_report.yml  feat_request.yml
.github/workflows/: _java-binding-tests.yml  _pre-commit.yml  _python-binding-tests.yml  _unit-tests.yml  pull-request.yml
bindings/dotnet/: Cargo.toml
bindings/dotnet/src/: lib.rs
bindings/java/: Cargo.toml
bindings/java/bernard-ledit/: pom.xml
bindings/java/bernard-ledit/src/main/java/com/mindee/bernardledit/: Main.java  NativeLoader.java
bindings/java/bernard-ledit/src/main/java/com/mindee/bernardledit/geometry/: Point.java  Polygon.java
bindings/java/bernard-ledit/src/test/java/com/mindee/bernardledit/geometry/: PointTest.java  PolygonTest.java
bindings/java/quilldee/: pom.xml
bindings/java/quilldee/src/main/java/com/mindee/quilldee/: Main.java  NativeLoader.java
bindings/java/quilldee/src/main/java/com/mindee/quilldee/geometry/: Point.java  Polygon.java
bindings/java/quilldee/src/test/java/com/mindee/quilldee/geometry/: PointTest.java  PolygonTest.java
bindings/java/src/: lib.rs
bindings/java/src/geometry/: point.rs  polygon.rs
bindings/nodejs/: Cargo.toml  build.rs
bindings/nodejs/src/: lib.rs
bindings/php/: Cargo.toml
bindings/php/src/: lib.rs
bindings/python/: Cargo.toml  pyproject.toml
bindings/python/python/bernard_ledit/: __init__.py
bindings/python/python/bernard_ledit/tests/: conftest.py  test_geometry.py
bindings/python/python/quilldee/: __init__.py
bindings/python/python/quilldee/tests/: conftest.py  test_geometry.py
bindings/python/src/: lib.rs
bindings/python/src/geometry/: mod.rs  point.rs  polygon.rs
bindings/ruby/: Cargo.toml
bindings/ruby/src/: lib.rs
core/: Cargo.toml
core/src/: lib.rs
core/src/geometry/: point.rs  points.rs  polygon.rs
