[package]
name = "quilldee-java"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
name = "quilldee_java"
crate-type = ["cdylib"]

[dependencies]
quilldee = { path = "../../core", features = ["full"] }
jni = "0.22.4"

[lints]
workspace = true

