[package]
name = "bernard-ledit-java"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
name = "bernard_ledit_java"
crate-type = ["cdylib"]

[dependencies]
bernard-ledit = { path = "../../core", features = ["full"] }
jni = "0.22.4"

[lints]
workspace = true

