[package]
name = "quilldee-node"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
name = "quilldee_node"
crate-type = ["cdylib"]

[dependencies]
quilldee = { path = "../../core", features = ["full"] }
napi = { version = "2", features = ["napi9"] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[lints]
workspace = true
