[package]
name = "bernard-ledit-php"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
name = "bernard_ledit_php"
crate-type = ["cdylib"]

[dependencies]
bernard-ledit = { path = "../../core", features = ["full"] }
ext-php-rs = "0.15"

[build-dependencies]
ext-php-rs = { version = "0.15", features = ["closure"] }

[lints]
workspace = true
