[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "bernard-ledit"
version = "0.1.0"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
]

[tool.maturin]
module-name = "bernard_ledit._bernard_ledit"
python-source = "python"
features = ["pyo3/extension-module"]

[tool.pytest.ini_options]
testpaths = ["python/bernard_ledit/tests"]
pythonpath = ["python"]
