[package]
name = "quilldee-ruby"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[lib]
name = "quilldee_ruby"
crate-type = ["cdylib"]

[dependencies]
quilldee = { path = "../../core", features = ["full"] }
uniffi = { version = "0.31.1" }

[build-dependencies]
uniffi = { version = "0.31.1", features = ["build"] }

[lints]
workspace = true
